--- a/tasks/rpm.yml
+++ b/tasks/rpm.yml
@@ -5,5 +5,9 @@
 - name: Add epel repository
   yum: name="epel-release" state=latest
 
-- name: Install Tor router
-  yum: name="tor" state=latest update_cache=yes
+- name: Install basic packages
+  yum: name="{{item}}" state=latest update_cache=yes
+  with_items:
+    - openssh-server
+    - git
+    - sudo
