--- a/tasks/apt.yml
+++ b/tasks/apt.yml
@@ -5,5 +5,9 @@
 - name: Upgrade system
   apt: upgrade=full
 
-- name: Install Tor router
-  apt: name=tor state=present
+- name: Install basic packages
+  apt: name="{{item}} state=present
+  with_items:
+    - openssh-server
+    - git
+    - sudo
