(chore) add installer script rules and update desciption

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
   author: denzuko
-  description: basic out of bounds ssh tor service 
-  issue_tracker_url: https://github.com/denzuko-ansible-roles/tor/issues
+  description: Install latest version of openstack 
+  issue_tracker_url: https://github.com/denzuko-ansible-roles/openstack/issues
   license: BSD
   min_ansible_version: 2.0
   github_branch: master
@@ -10,15 +10,13 @@ galaxy_info:
      versions: [ all ]
    - name: RedHat
      versions: [ all ]
-   - name: Alpine
-     versions: [ all ]
    - name: Debian
      versions: [ all ]
    - name: Ubuntu
      versions: [ all ]
-
+  catagories:
+    - cloud
+    - system
   galaxy_tags:
-    - tor
-    - ssh
-    - hidden-service
+    - openstack
 dependencies: []
