--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ install:
   - pip install ansible
 
   # Add ansible.cfg to pick up roles path.
-  - "printf '[defaults]\nroles_path = ../' > ansible.cfg"
+  - "printf '[defaults]\nroles_path = ./\ninventory = tests/inventory\n' > ansible.cfg"
 
 script:
-  - ansible-playbook -i tests/inventory tests/test.yml --syntax-check
+  - ansible-playbook tests/test.yml --syntax-check
   # We'll add some commands to test the role here.
 
 notifications:
