--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
   # Add ansible.cfg to pick up roles path.
   - "echo '[defaults]' >> ansible.cfg"
   - "echo 'roles_path = ./' >> ansible.cfg"
-  - "echo 'inventory = tests/inventory'' >> ansible.cfg"
+  - "echo 'inventory = tests/inventory' >> ansible.cfg"
 
 script:
   - ansible-playbook tests/test.yml --syntax-check
