--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
 
   # Add ansible.cfg to pick up roles path.
   - "echo '[defaults]' >> ansible.cfg"
-  - "echo 'roles_path = ./' >> ansible.cfg"
+  - "echo 'roles_path = ../' >> ansible.cfg"
   - "echo 'inventory = tests/inventory' >> ansible.cfg"
 
 script:
