--- a/tasks/apt.yml
+++ b/tasks/apt.yml
@@ -6,8 +6,9 @@
   apt: upgrade=full
 
 - name: Install basic packages
-  apt: name="{{item}} state=present
+  apt: name="{{item}}" state=present
   with_items:
     - openssh-server
     - git
     - sudo
+    - ansible
