--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
-- when: ansible_distribution in ['Debian', 'Ubuntu'] 
+- when: ansible_os_family == 'Debian' 
   import_tasks: apt.yml
 
-- when: ansible_distribution in ['RedHat','CentOS'] 
+- when: ansible_os_family == 'RedHat' 
   import_tasks: rpm.yml
 
 - name: Make sure we have a 'wheel' group
